@@ -1,3 +1,10 @@
+2004-08-25  Mark McLoughlin  <mark@skynet.ie>
+
+	* backends/markup-tree.c: (markup_entry_get_value): don't
+	abort if we find no local schema to match any locales - there
+	may not be a "C" local schema at all. See bug #147522 for a
+	test case from Caio Begotti <caio1982@gmail.com >
+
 2004-08-19  J.H.M. Dassen (Ray) <jdassen@debian.org>
 
 	Backport from HEAD:
